--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	const typedTextSpan = document.querySelector(".typed-text");
 const cursorSpan = document.querySelector(".cursor");
 
-const textArray = ["Piyush", "Hooman", "a student", "a SMOL Developer"];
+const textArray = ["Piyush", "hemker1469" "Hooman", "a student", "a SMOL Developer"];
 const typingDelay = 120;
 const erasingDelay = 120;
 const newTextDelay = 1000; // Delay between current and next text
